dashboard/dashboard.yml
# ------------------- Dashboard Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard
    spec:
      containers:
        - name: kubernetes-dashboard
          #image: harbor.shinezone.com/shinezonetest/kubernetes-dashboard-amd64:v1.8.3
          image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.0
          ports:
#            - containerPort: 8443
#              protocol: TCP
            - containerPort: 5443
              protocol: TCP
          command:
            - /dashboard
            - --insecure-bind-address=0.0.0.0
#            - --bind-address=0.0.0.0
#            - --auto-generate-certificates
            - --enable-insecure-login=true
            - --insecure-port=5443
#          args:
#            - --auto-generate-certificates
#            - --insecure-port=5443
            # Uncomment the following line to manually specify Kubernetes API server Host
            # If not specified, Dashboard will attempt to auto discover the API server and connect
            # to it. Uncomment only if the default does not work.
            # - --apiserver-host=http://my-address:port
            #- --authentication-mode=basic
          volumeMounts:
            - name: kubernetes-dashboard-certs
              mountPath: /certs
              # Create on-disk volume to store exec logs
            - mountPath: /tmp
              name: tmp-volume
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 5443
            initialDelaySeconds: 30
            timeoutSeconds: 30
      volumes:
        - name: kubernetes-dashboard-certs
          secret:
            secretName: kubernetes-dashboard-certs
        - name: tmp-volume
          emptyDir: {}
      serviceAccountName: kubernetes-dashboard
      # Comment the following tolerations if Dashboard must not be deployed on master
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule

---
# ------------------- Dashboard Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  #    kubernetes.io/cluster-service: "true"
  #    addonmanager.kubernetes.io/mode: Reconcile
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 8443
      nodePort: 30000
      name: https
    - port: 80
      targetPort: 5443
      name: http
  selector:
    k8s-app: kubernetes-dashboard
